Release Note

* current
  * changed messages for finished by callback or catalog check
  * introducing multiporcesssing in add.py
  * kill instead of reassign in copyArchive
  * sending jediTaskID to the pilot for anal jobs
  * changed array limit in getEventRanges
  * added FinishedJobsByCallback/Catalog to SLS 
  * fixed EventPicker for fatal errors
  * fixed ES retry for failed jobs
  * reduced interval for catalog check to 4h  
  * introduced --eventPickSkipDaTRI
  * updating task status when EventPicker failed
  * making EventPicker log available to users
  * parsing DN when setting owner in EventPicker
  * reduced sleep interval in AdderAtlas
  * fixed datasetMgr not to delete _sub at dst:
  * fixed location registration for _sub + dst:
  * added updateFailedJobs in SetupperPluginBase
  * extended proxy cache for HPC
  * added changeTaskRamCount and changeTaskWalltime
  * fixed pilot retry to reset endTime error dialog
  * fixed nFilesOnHold for killed merging jobs
  * added protection to AdderGen against immediate XML reading
  * added eventPickNumSites
  * added protection against multiple updateUnmergeDataset calls
  * allowing to use non-T1 SE as destination
  * enabled the rebrokerage for ganga jobs
  * fixed insertTaskParamsPanda for analysis submission with prod role
  * fixed typo in killEventServiceConsumers and killUnusedEventServiceConsumers
  * changed to allow retry of failed analysis jobs while the task is still running
  * changed insertTaskParams to work with duplicated task names
  * added protection to MsgWrapper
  * increased timeout value for EP
  * improved TA to aggregate container
  * fixed pilot retry for pmerge
  * replacing $JEDITASKID
  * extracting sourceURL when fixedSandbox
  * added fixedSandbox
  * fixed panda_proxy_cache.py
  * removed NOWAIT from finalizePendingJobs
  * added protection when NOWAIT error happens in finalizePending
  * extracting nFiles and nEvents for incexec
  * added DataServiceUtils.getSitesShareDDM